<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/none" android:id="@+id/none_submenu">
        <menu>
            <group android:id="@+id/noncheckable_group" android:checkableBehavior="none">
                <item android:id="@+id/noncheckable_item_1"
                    android:title="@string/item1" />
                <item android:id="@+id/noncheckable_item_2"
                    android:title="@string/item2" />
                <item android:id="@+id/noncheckable_item_3"
                    android:title="@string/item3" />
                <item android:id="@+id/noncheckable_item_4"
                    android:title="@string/item4" />
            </group>
        </menu>
    </item>

    <item android:title="@string/all" android:id="@+id/all_submenu">
        <menu>
            <group android:id="@+id/checkable_group" android:checkableBehavior="all">
                <item android:id="@+id/checkable_item_1"
                    android:title="@string/item1" />
                <item android:id="@+id/checkable_item_2"
                    android:title="@string/item2"
                    android:checked="true" />
                <item android:id="@+id/checkable_item_3"
                    android:title="@string/item3"
                    android:checked="true" />
                <item android:id="@+id/checkable_item_4"
                    android:title="@string/item4" />
            </group>
        </menu>
    </item>

    <item android:title="@string/single" android:id="@+id/single_submenu">
        <menu>
            <group android:id="@+id/exclusive_checkable_group" android:checkableBehavior="single">
                <item android:id="@+id/exclusive_checkable_item_1"
                    android:title="@string/item1" />
                <item android:id="@+id/exclusive_checkable_item_2"
                    android:title="@string/item2" />
                <item android:id="@+id/exclusive_checkable_item_3"
                    android:title="@string/item3"
                    android:checked="true" />
                <item android:id="@+id/exclusive_checkable_item_4"
                    android:title="@string/item4" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nogroup">
        <menu>
            <item android:id="@+id/nongroup_checkable_item_1"
                android:title="@string/item1"
                android:checkable="true" />
            <item android:id="@+id/nongroup_checkable_item_2"
                android:title="@string/item2"
                android:checkable="true"
                android:checked="true" />
            <item android:id="@+id/nongroup_checkable_item_3"
                android:title="@string/item3"
                android:checkable="true"
                android:checked="true" />
            <item android:id="@+id/nongroup_checkable_item_4"
                android:title="@string/item4" />
        </menu>
    </item>
</menu>